# nscam

./: .gitattributes  LICENSE  README.md
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
web/: index.php
