[package]
name = "nscam"
version = "0.0.1"
edition = "2021"
authors = ["dogesenic <dogesenic@proton.me>"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["std", "derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
